--- a/auto/app/templates/edit_order.html
+++ b/auto/app/templates/edit_order.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 {% block content %}
-	<h1>Создание заказа</h1>
+	<h1>Рейс №{{ order.orders.id }}</h1>
 	<form action="" method="post">
 		{{ form.hidden_tag() }}
 		<p>
