--- a/auto/app/templates/_order_list.html
+++ b/auto/app/templates/_order_list.html
@@ -8,7 +8,7 @@
 	</tr>
 	{% for order in orders %}
 	<tr valign="top">
-		<td><a href="{{ url_for('order', id=order.orders.id) }}">{{ order.orders.id }}<a></td>
+		<td><a href="{{ url_for('order', id=order.orders.id) }}">Рейс № {{ order.orders.id }}<a></td>
 		<td>{{ order.clients.name }}</td>
 		<td>{{ order.orders.date_from }}</td>
 		<td>{{ order.orders.date_to }}</td>
